--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "laravel-notification-channels/fcm": "*",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "pusher/pusher-php-server": "^7.2",
+        "spatie/laravel-query-builder": "^5.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
