--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel-notification-channels/fcm": "*",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.2",
+        "laravel/telescope": "^4.14",
         "laravel/tinker": "^2.7",
         "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-query-builder": "^5.2"
