--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "spatie/laravel-query-builder": "^5.2"
     },
     "require-dev": {
+        "doctrine/dbal": "^3.6",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
